--- a/codewind.yaml
+++ b/codewind.yaml
@@ -4,3 +4,5 @@ projectType: appsodyExtension
 commands: []
 detection: .appsody-config.yaml
 templates: https://raw.githubusercontent.com/kabanero-io/codewind-appsody-templates/master/devfiles/index.json
+config:
+  containerAppRoot: /project/user-app
